--- a/vagrant/catalog/templates/create_tvitem.html
+++ b/vagrant/catalog/templates/create_tvitem.html
@@ -27,7 +27,7 @@
 		<!-- Hi,
 		Thank you for the last review, especially that function decorator.
 		In last review you point out that argument "current_genre" is not pass in from server side in file "create_tvitem.html" . I use that argument to set a default genre(category) value for html element "select" when user in a specific genre page, in case that user forgot pick a genre.
-		I don't know if I get it wrong or I have done the wrong way? Please let me know 😊 
+		I don't know if I get it wrong or I have done the wrong way? Please let me know :)
 		Thanks and sorry for my poor English. -->
 		{% else %}
 		<form method="post">
